--- a/java/paranormal/para/WEB-INF/web.xml
+++ b/java/paranormal/para/WEB-INF/web.xml
@@ -4,6 +4,10 @@
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
      version="2.4">
+	 
+	 <login-config>
+		<auth-method>BASIC</auth-method>
+	 </login-config>
      
      <welcome-file-list>
      	<welcome-file>pages/welcome.jsp</welcome-file>
